syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.saar.minecraft.broker";
option java_outer_classname = "BrokerProto";

package minecraft;

import "shared.proto";


service Broker {
    rpc StartGame (GameData) returns (WorldSelectMessage) {}
    rpc GetMessageChannel (GameId) returns (stream TextMessage) {}
    rpc GetControlChannel (GameId) returns (stream ProtectBlockMessage) {}
    rpc EndGame (GameId) returns (None) {}
    rpc HandleStatusInformation (StatusMessage) returns (None) {}
    rpc HandleBlockPlaced (BlockPlacedMessage) returns (None) {}
    rpc HandleBlockDestroyed (BlockDestroyedMessage) returns (None) {}
    rpc HandleMinecraftServerError (MinecraftServerError) returns (None) {}
    rpc HandleWorldFileError (WorldFileError) returns (None) {}
    rpc HandleTextMessage (TextMessage) returns (None) {}
}

// clientAddress is the IP address of the player
message GameData {
    string clientAddress = 1;
    string playerName = 2;
}
